# AI_Powered_Regulatory_Compliance_Assistant_for_EU_Financial_Institutions

./: .dockerignore  README.md  databricks.yml  docker-compose.yml  pyproject.toml
Docker/: Dockerfile
data/: eval_dataset.jsonl
data/vector_db/499092cd-5a0e-4a8b-b157-2a4bd295e1c2/: index_metadata.pickle
frontend/: index.html
practice_fastAPI/: main.py
src/: API_RAG.py  CLI_RAG.py  app_state.py  main0.py  main99.py
src/API_layer/: main2.py  security.py
src/API_layer/routers/: auth.py  retrieval.py  retrieval2.py
src/RAG_layer/: engine.py  rag_pipeline.py  retriever.py
src/RAG_layer/evaluation/: llm_as_judge.py
src/config/: settings.py
src/data_ingestion/: bronze_layer.py  chunking.py  context_builder.py  embeddings.py  metadata.py  pdf_ingestion.py  rag_pipeline.py  run_ingestion.py  vector_store.py
src/databricks_code/: Silver_layer.py  azure_cli_rag.py
src/databricks_code.py/: Bronze_layer.py  Gold_delta_table.py  azure_ai_search.py  azure_cli_rag.py  azure_env.py
src/shared_models/: models.py
