[project]
name = "ai-regulatory-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "jwt>=1.4.0",
    "langchain>=1.3.4",
    "langchain-core>=1.4.1",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "passlib>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "pyspark>=4.1.2",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "flake8>=7.3.0",
    "pytest>=9.0.3",
]
